Split services to separate microservices (#27)
* split services to separate micro_service

* move up build docker image for core in workflow

* fix workflow

* fix workflow

* fix workflow

* fix workflow

* fix workflow